# ST-CAFNet

./: CITATION.cff  LICENSE  README.md  evaluate.py  infer.py  manifest_schema.csv  pyproject.toml  requirements.txt  train.py
configs/: default.yaml
scripts/: __init__.py  create_splits.py
stcafnet/: __init__.py  data.py  metrics.py  model.py  utils.py
tests/: test_data.py  test_model.py
