[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stcafnet"
version = "1.0.0"
description = "ST-CAFNet for visual-olfactory salmon freshness prediction"
requires-python = ">=3.10"
dependencies = [
  "torch==2.2.2",
  "torchvision==0.17.2",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scikit-learn==1.3.2",
  "Pillow==10.3.0",
  "PyYAML==6.0.1",
  "tqdm==4.66.4",
]

[tool.setuptools.packages.find]
include = ["stcafnet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

